# jig-sh

./: .gitattributes  .gitignore  .jig.toml  .jig.yml  .mcp.json  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  agent-map.md  copier.yml
.agent/: PLANS.md  jig-contract.json
.agent/plans/: plan_01KQ5R13M195MVS2A0BSXZ1369.md  plan_01KQW4JDMGH0DKKK75M4ZKVHRX.md  plan_01KRBA25N85VHPW8KH7APPDYCJ.md  plan_01KRC66CHR8A6AWP3K23HJVD1E.md  plan_01KRC96BP25YF9QRV505QCSJ5C.md  plan_01KRCCE2YY5AF6XQ6Z5FCZ28F9.md  plan_01KRDPB21SJ7V2WAYC6N890SQK.md  plan_01KRG3E2T9KME8KSRPZ6BY9101.md  plan_01KRH69N34YZHXPXEER908Y1Y9.md  plan_01KRH6C77BFYG4KEFG8TE5SZS0.md  plan_01KRHA0NT97NDVTR9XDY12H0R5.md  plan_01KRR81MERMXQ224R22C7RP6YD.md  plan_01KRRP4971DY6TM12JXQHRKSBF.md  plan_01KRS57A22Z735TSZCCSF4J8QC.md  plan_01KRSC6ZACYWDREXFSR6ZETH5N.md  plan_01KRV0NJHBKNF5YPZ6M60KERAT.md  plan_01KRVGS2SPDB5C7KEG4RZXSH91.md  plan_01KRVNMYQXVYEWA3MJ7M90XPJP.md  plan_01KRW2ZDPAK6EFJQDVBCS6AEPD.md  plan_01KRW4YYATMCDGTJ0YYT2B743H.md  plan_01KRWQ0V3DV7ZADB2CJ0M935SW.md  plan_01KRXAB7A2BG6F55S21CRHV3BF.md  plan_01KRXAZ2ME0FXR0YVC04DCBEQN.md  plan_01KS0BXCR0Q127HT1KPE9CS5KT.md  plan_01KS0CXQNA2JAFEJR924V251DD.md  plan_01KS0DCR0S2GQY1Z4FQH8TK0V8.md  plan_01KS0E17BV3TEEBX9S5KJTCN8N.md  plan_01KS0EHGDA36C6MAT0JQBMQRQY.md  plan_01KSBCBBX4R1BJ63ECF2Z3FYC1.md  plan_01KSZ0E9NXDD4XJYT5MBESWPEV.md
.agent/state/: decisions.jsonl  plans.jsonl  receipts.jsonl  sessions.jsonl
.github/workflows/: agent-map-check.yml  release.yml  repo-policy.yml  rust-tests.yml  webapp-checks.yml
crates/jig/: AGENTS.md  Cargo.toml  build.rs
crates/jig-contract/: AGENTS.md  Cargo.toml
crates/jig-contract/src/: lib.rs
crates/jig-core/: AGENTS.md  Cargo.toml
crates/jig-dev-proxy/: AGENTS.md  Cargo.toml  README.md
crates/jig-dev-proxy/src/: certs.rs  file_ops.rs  host.rs  lib.rs  ports.rs  processes.rs  server.rs  service.rs  state.rs  types.rs  workspace.rs
crates/jig-dev-proxy/src/certs/: tests.rs  trust.rs
crates/jig-dev-proxy/src/lib/: tests.rs
crates/jig-dev-proxy/src/processes/: cleanup.rs  frameworks.rs  listener_owner.rs  proxy.rs  tests.rs
crates/jig-dev-proxy/src/server/: backend.rs  headers.rs  routing.rs  tests.rs  tls.rs  tunnel.rs
crates/jig-dev-proxy/src/service/: tests.rs
crates/jig-dev-proxy/src/state/: process_identity.rs  signature.rs  tests.rs
crates/jig-dev-proxy/src/workspace/: tests.rs
crates/jig-features/: AGENTS.md  Cargo.toml
crates/jig-features/src/: lib.rs
crates/jig-rust/: AGENTS.md  Cargo.toml
crates/jig-sqlx/: AGENTS.md  Cargo.toml
crates/jig-typescript/: AGENTS.md  Cargo.toml
crates/jig-typescript/src/: lib.rs
crates/jig-vault/: AGENTS.md  Cargo.toml
crates/jig-vault/src/: audit.rs  broker.rs  crypto.rs  env_policy.rs  error.rs  format.rs  lib.rs  redact.rs  run.rs  secret.rs  store.rs  types.rs  vault.rs  vault_tests.rs
crates/jig/src/: agent_guides.rs  bootstrap.rs  cli.rs  command.rs  context.rs  dev_proxy.rs  doctor.rs  git_receipts.rs  info.rs  lib.rs  main.rs  mcp.rs  policy.rs  process.rs  progress.rs  prompt_registry.rs  runtime.rs  serde_helpers.rs  shell.rs  state.rs  test_env.rs  tool_defs.rs
crates/jig/src/bootstrap/: adopt_infer.rs  answers.rs  copier.rs  crate_classification.rs  crate_guide.rs  embedded_templates.rs  embedded_templates_snapshot.rs  file_copy.rs  gate_preview.rs  git.rs  initial_copy.rs  managed_paths.rs  opts.rs  path.rs  presets.rs  preview_seed.rs  renderer.rs  scaffold.rs  staged_render.rs  sync.rs  template_source.rs  tests.rs
crates/jig/src/bootstrap/adopt_infer/: commands.rs  frontend.rs  github.rs  metadata.rs  package_manager.rs  profile.rs  repo.rs  rust_sqlx.rs  scan.rs  topology.rs
crates/jig/src/bootstrap/adopt_infer/commands/: rust.rs  sqlx.rs  tool.rs  web.rs
crates/jig/src/bootstrap/answers/: dev.rs  vault.rs
crates/jig/src/bootstrap/scaffold/: embedded_templates.rs  embedded_templates_snapshot.rs  frontend.rs  names.rs  rust_workspace.rs  templates.rs  write.rs
crates/jig/src/bootstrap/tests/: basic.rs  committed.rs  frontend_adoption.rs  template_mode.rs  template_source.rs  working_tree.rs
crates/jig/src/cli/: agent.rs  bootstrap_run.rs  bootstrap_run_tests.rs  check.rs  command_conversion.rs  help_tests.rs  output.rs  output_tests.rs  preset_tests.rs  prompt.rs  prompt_run.rs  prompt_run_tests.rs  proxy.rs  run.rs  run_tests.rs  state.rs  structured_error.rs  tests.rs  vault.rs  vault_run.rs  vault_run_tests.rs  work.rs
crates/jig/src/command/: agent.rs  check.rs  migration.rs  prompt.rs  proxy.rs  state.rs  vault.rs  work.rs
crates/jig/src/context/: contract_tests.rs  tests.rs  work_config.rs
crates/jig/src/dev_proxy/: tests.rs
crates/jig/src/policy/: agent_map.rs  sqlx.rs  tests.rs
crates/jig/src/policy/sqlx/: tests.rs
crates/jig/src/runtime/: agent.rs  prompt.rs  requests.rs  tests.rs  tool_execution.rs  vault.rs  work.rs
crates/jig/src/runtime/tests/: agent.rs  common.rs  mcp.rs  work.rs
crates/jig/src/runtime/work/: checks.rs  gates.rs  goal.rs  review.rs  tools.rs
crates/jig/src/runtime/work/review/: evidence.rs  process.rs  prompt.rs
crates/jig/src/state/: events.rs  plans.rs  receipts.rs  sessions.rs  tests.rs
docs/: adoption.md  configuration.md  developer-ux.md  extraction-matrix.md  public-contract.md  repo-intent.md
examples/: README.md  adopted-custom-commands.toml  backend-only.toml  full-stack.toml  rust-backend-only.toml  rust-sqlx-schema-dump.toml  tooling-only.toml  vite-frontend.toml
examples/full-stack-app/: .jig.toml  .jig.yml
examples/onesales-like/: .agentic-kit.yaml  .jig.yml
landing/: README.md  astro.config.mjs  package.json  wrangler.toml
scripts/: check-agent-guides.sh  check-agent-map.sh  check-jig-contract.sh  check-no-mod-rs.sh  check-rust-file-loc.sh  deploy-landing.sh  generate-agent-map.sh  install-jig.sh  jig  jig-toml.sh  new-checkout.sh  normalize-template-source.sh  release-notes.sh  release.sh  validate-fixtures.sh
scripts/fixtures/: lib.sh  rendered-repos.sh  runtime-smoke.sh  source-normalization.sh  stub-repos.sh
(+96 files in other folders)
