[workspace]
members = ["crates/jig", "crates/jig-dev-proxy"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.85"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
bytes = "1.10.1"
clap = { version = "4.5.50", features = ["derive"] }
ctrlc = "3.5.0"
dirs = "6.0.0"
fs4 = "0.13.1"
getrandom = "0.3.4"
http-body-util = "0.1.3"
hyper = { version = "1.7.0", features = ["full"] }
hyper-util = { version = "0.1.17", features = ["full"] }
libc = "0.2.177"
rcgen = { version = "0.14", features = ["x509-parser"] }
rustls = { version = "0.23.35", default-features = false, features = ["aws_lc_rs", "std", "tls12"] }
rustls-pemfile = "2.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha1 = "0.10.6"
sha2 = "0.10.9"
subtle = "2.6.1"
tempfile = "3.23.0"
time = "0.3.44"
tokio = { version = "1.48.0", features = ["full"] }
tokio-rustls = "0.26.1"
toml = "0.9.8"
ulid = "1.2.1"
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_Threading"] }
x509-parser = { version = "0.18.1", features = ["verify"] }
zeroize = "1.8.2"
