[workspace]
members = [
    "crates/jig",
    "crates/jig-contract",
    "crates/jig-core",
    "crates/jig-dev-proxy",
    "crates/jig-features",
    "crates/jig-rust",
    "crates/jig-sqlx",
    "crates/jig-typescript",
    "crates/jig-vault",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.85"
version = "0.2.0-beta.1"

[workspace.dependencies]
anyhow = "1.0.100"
argon2 = "0.5.3"
base64 = "0.22.1"
bytes = "1.10.1"
chacha20poly1305 = "0.10.1"
clap = { version = "4.5.50", features = ["derive"] }
ctrlc = "3.5.0"
dirs = "6.0.0"
fs4 = "0.13.1"
getrandom = "0.3.4"
hkdf = "0.12.4"
hmac = "0.12.1"
http-body-util = "0.1.3"
hyper = { version = "1.7.0", features = ["full"] }
hyper-util = { version = "0.1.17", features = ["full"] }
jig-dev-proxy = { path = "crates/jig-dev-proxy", version = "=0.2.0-beta.1" }
jig-contract = { path = "crates/jig-contract", version = "=0.2.0-beta.1" }
jig-core = { path = "crates/jig-core", version = "=0.2.0-beta.1" }
jig-features = { path = "crates/jig-features", version = "=0.2.0-beta.1" }
jig-rust = { path = "crates/jig-rust", version = "=0.2.0-beta.1" }
jig-sqlx = { path = "crates/jig-sqlx", version = "=0.2.0-beta.1" }
jig-typescript = { path = "crates/jig-typescript", version = "=0.2.0-beta.1" }
jig-vault = { path = "crates/jig-vault", version = "=0.2.0-beta.1" }
libc = "0.2.177"
rcgen = { version = "0.14", features = ["x509-parser"] }
rpassword = "7.5.2"
rustls = { version = "0.23.35", default-features = false, features = ["aws_lc_rs", "std", "tls12"] }
rustls-pemfile = "2.2.0"
secrecy = "0.10.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml_ng = "0.10.0"
sha1 = "0.10.6"
sha2 = "0.10.9"
subtle = "2.6.1"
tempfile = "3.23.0"
time = "0.3.44"
tokio = { version = "1.48.0", features = ["full"] }
tokio-rustls = "0.26.1"
toml = "0.9.8"
ulid = "1.2.1"
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_Threading"] }
x509-parser = { version = "0.18.1", features = ["verify"] }
zeroize = "1.8.2"
