[package]
name = "jig-dev-proxy"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Internal local development reverse proxy used by the matching jig-sh CLI release."
repository = "https://github.com/bpcakes/jig-sh"
homepage = "https://github.com/bpcakes/jig-sh"
documentation = "https://github.com/bpcakes/jig-sh/tree/master/docs"
readme = "README.md"
keywords = ["proxy", "localhost", "dev", "tls"]
categories = ["command-line-utilities", "development-tools", "network-programming"]

[lib]
name = "jig_dev_proxy"
doc = false

[dependencies]
anyhow.workspace = true
base64.workspace = true
bytes.workspace = true
ctrlc.workspace = true
dirs.workspace = true
fs4.workspace = true
getrandom.workspace = true
http-body-util.workspace = true
hyper.workspace = true
hyper-util.workspace = true
jig-core.workspace = true
libc.workspace = true
rcgen.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
serde.workspace = true
serde_json.workspace = true
sha1.workspace = true
sha2.workspace = true
subtle.workspace = true
time.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
x509-parser.workspace = true
zeroize.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys.workspace = true

[dev-dependencies]
tempfile.workspace = true
