[package]
name = "jig-features"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Feature registry for Jig contract tools and command keys."
repository = "https://github.com/bpcakes/jig-sh"
homepage = "https://github.com/bpcakes/jig-sh"
documentation = "https://github.com/bpcakes/jig-sh/tree/master/docs"

[dependencies]
jig-contract.workspace = true
jig-core.workspace = true
jig-rust.workspace = true
jig-sqlx.workspace = true
jig-typescript.workspace = true
