[package]
name = "jig-vault"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Local encrypted vault and redaction primitives for the jig-sh runtime."
repository = "https://github.com/bpcakes/jig-sh"
homepage = "https://github.com/bpcakes/jig-sh"
documentation = "https://github.com/bpcakes/jig-sh/tree/master/docs"
keywords = ["vault", "secrets", "agents", "cli"]
categories = ["command-line-utilities", "cryptography"]

[lib]
name = "jig_vault"

[dependencies]
anyhow.workspace = true
argon2.workspace = true
base64.workspace = true
chacha20poly1305.workspace = true
dirs.workspace = true
fs4.workspace = true
getrandom.workspace = true
hkdf.workspace = true
hmac.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
subtle.workspace = true
tempfile.workspace = true
time.workspace = true
ulid.workspace = true
zeroize.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true
