[package]
name = "jig-sh"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Agent-oriented repository harness and MCP runtime for Rust application repos."
repository = "https://github.com/bpcakes/jig-sh"
homepage = "https://github.com/bpcakes/jig-sh"
documentation = "https://github.com/bpcakes/jig-sh/tree/main/docs"
readme = "../../README.md"
keywords = ["agents", "cli", "mcp", "workflow"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "jig"

[[bin]]
name = "jig"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
fs4.workspace = true
minijinja = { version = "2.19.0", features = ["custom_syntax"] }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tempfile.workspace = true
toml.workspace = true
ulid.workspace = true

[dev-dependencies]
