[package]
name = "jig-sh"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Agent-oriented repository harness and MCP runtime for Rust application repos."
repository = "https://github.com/bpcakes/jig-sh"
homepage = "https://github.com/bpcakes/jig-sh"
documentation = "https://github.com/bpcakes/jig-sh/tree/master/docs"
readme = "../../README.md"
keywords = ["agents", "cli", "mcp", "workflow"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "jig"

[[bin]]
name = "jig"
path = "src/main.rs"

[features]
# The default CLI build includes the local dev proxy. Library consumers that
# only need the harness/runtime API can use `default-features = false`.
default = ["dev-proxy"]
dev-proxy = ["dep:jig-dev-proxy"]

[dependencies]
anyhow.workspace = true
clap.workspace = true
fs4.workspace = true
jig-contract.workspace = true
jig-dev-proxy = { workspace = true, optional = true }
jig-features.workspace = true
jig-vault.workspace = true
minijinja = { version = "2.19.0", features = ["custom_syntax"] }
rpassword.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml_ng.workspace = true
sha2.workspace = true
tempfile.workspace = true
time.workspace = true
toml.workspace = true
ulid.workspace = true
wait-timeout.workspace = true
zeroize.workspace = true

[dev-dependencies]
